--- a/src/scss/components/_header-navigation.scss
+++ b/src/scss/components/_header-navigation.scss
@@ -20,7 +20,7 @@
 		top: 0;
 		left: 0;
 		margin-top: 8rem;
-		margin-left: 0.6rem;
+		margin-left: 0.1rem;
 		width: 100%;
 
 		@include screen-lg {
@@ -74,6 +74,10 @@
 
 .active-menu {
 	transform: translateY(0) !important;
+}
+
+.hamburger {
+	transform: scale(0.85);
 }
 
 // ul:hover li {
