--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,26 +19,6 @@ body {
 	max-width: 1250px !important;
 	margin: 0 auto;
 	padding: 0rem 2rem;
-
-	// @include screen-sm-apple {
-	// 	max-width: 370px !important;
-	// }
-
-	// @include screen-sm {
-	// 	max-width: 520px !important;
-	// }
-
-	// @include screen-md {
-	// 	max-width: 730px !important;
-	// }
-
-	// @include screen-lg {
-	// 	max-width: 900px !important;
-	// }
-
-	// @include screen-xl {
-	// 	max-width: 1200px !important;
-	// }
 }
 
 img {
@@ -49,3 +29,5 @@ img {
 
 @import "../scss/components/button-primary";
 @import "../scss/components/header-navigation";
+
+@import "./pages/heroPage";
