--- a/src/scss/pages/_heroPage.scss
+++ b/src/scss/pages/_heroPage.scss
@@ -3,6 +3,11 @@
 		@include screen-md {
 			margin-top: 4rem;
 		}
+
+		@include screen-lg {
+			padding-left: 1rem;
+		}
+
 		&_title {
 			font-size: 1.75rem;
 
