--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,7 +35,10 @@ img {
 
 @import "../scss/components/button-primary";
 @import "../scss/components/header-navigation";
+@import "../scss/components/service-item";
+@import "../scss/components/service-providing";
+@import "../scss/components/work-experience";
+@import "../scss/components/experience-item";
 
 @import "./pages/heroPage";
 @import "./pages/aboutPage";
-@import "./pages/servicePage";
