--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,7 +54,8 @@ img {
     left: 0;
     margin-top: 8rem;
     margin-left: 0.1rem;
-    width: 100%; }
+    width: 100%;
+    z-index: 100; }
     @media screen and (min-width: 1024px) {
       .nav-bar .nav-list {
         position: static;
@@ -94,9 +95,154 @@ img {
 .hamburger {
   transform: scale(0.85); }
 
+.service-item_image {
+  width: 300px;
+  height: 300px; }
+  .service-item_image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; }
+
+.service-item_context {
+  margin-top: 1rem;
+  width: 300px; }
+  .service-item_context h3 {
+    font-size: 1.2rem;
+    line-height: 24px;
+    margin-bottom: 1rem; }
+    @media screen and (min-width: 780px) {
+      .service-item_context h3 {
+        font-size: 1.35rem; } }
+    @media screen and (min-width: 1280px) {
+      .service-item_context h3 {
+        font-size: 1.5rem; } }
+  .service-item_context p {
+    font-size: 0.9rem; }
+    @media screen and (min-width: 481px) {
+      .service-item_context p {
+        font-size: 1rem; } }
+    @media screen and (min-width: 1024px) {
+      .service-item_context p {
+        font-size: 1.1rem; } }
+
+.service-page {
+  margin-bottom: 4rem; }
+  .service-page .service-title {
+    font-size: 1.2rem;
+    position: relative; }
+    @media screen and (min-width: 481px) {
+      .service-page .service-title {
+        font-size: 1.7rem; } }
+    @media screen and (min-width: 780px) {
+      .service-page .service-title {
+        font-size: 2rem; } }
+    @media screen and (min-width: 1024px) {
+      .service-page .service-title {
+        font-size: 2.4rem; } }
+    @media screen and (min-width: 1280px) {
+      .service-page .service-title {
+        font-size: 2.7rem; } }
+    .service-page .service-title::after {
+      content: "";
+      position: absolute;
+      bottom: -2px;
+      left: 50%;
+      transform: translateX(-25px);
+      width: 50px;
+      height: 3px;
+      background-color: #156f5b; }
+  .service-page .service-items {
+    margin-top: 4rem; }
+
+.exp {
+  margin-bottom: 4rem; }
+  .exp .exp-title {
+    font-size: 1.2rem;
+    position: relative; }
+    @media screen and (min-width: 481px) {
+      .exp .exp-title {
+        font-size: 1.7rem; } }
+    @media screen and (min-width: 780px) {
+      .exp .exp-title {
+        font-size: 2rem; } }
+    @media screen and (min-width: 1024px) {
+      .exp .exp-title {
+        font-size: 2.4rem; } }
+    @media screen and (min-width: 1280px) {
+      .exp .exp-title {
+        font-size: 2.7rem; } }
+    .exp .exp-title::after {
+      content: "";
+      position: absolute;
+      bottom: -2px;
+      left: 50%;
+      transform: translateX(-25px);
+      width: 50px;
+      height: 3px;
+      background-color: #156f5b; }
+  .exp .exp-item {
+    margin-top: 4rem; }
+
+.exp-item {
+  background-color: #fff;
+  padding: 1rem 2rem;
+  border-radius: 5px;
+  width: 330px;
+  box-shadow: 0px 0px 45px 0px #f0ebeb; }
+  @media screen and (min-width: 481px) {
+    .exp-item {
+      width: 450px; } }
+  @media screen and (min-width: 1024px) {
+    .exp-item {
+      width: 600px; } }
+  .exp-item h3 {
+    font-size: 1.4rem;
+    margin: 1rem 0; }
+    @media screen and (min-width: 780px) {
+      .exp-item h3 {
+        font-size: 1.6rem; } }
+    @media screen and (min-width: 1280px) {
+      .exp-item h3 {
+        font-size: 1.8rem; } }
+  .exp-item p {
+    font-size: 0.9rem;
+    margin-bottom: 1rem; }
+    @media screen and (min-width: 481px) {
+      .exp-item p {
+        font-size: 1rem; } }
+    @media screen and (min-width: 1024px) {
+      .exp-item p {
+        font-size: 1.1rem; } }
+  .exp-item .line {
+    width: 100%;
+    background-color: #000;
+    border-radius: 10px;
+    margin: 1rem 0;
+    transform: scale(0.8);
+    height: 15px;
+    overflow: hidden; }
+    .exp-item .line .skill {
+      padding: 10px 0;
+      border-radius: 10px;
+      animation: fillSkill 700ms ease;
+      line-height: 10px;
+      background-color: #156f5b;
+      width: 75%;
+      height: 100%; }
+
+@keyframes fillSkill {
+  0% {
+    width: 0; }
+  100% {
+    width: 75%; } }
+
 @media screen and (min-width: 780px) {
   .hero-main .hero-context {
     margin-top: 4rem; } }
+
+@media screen and (min-width: 1024px) {
+  .hero-main .hero-context {
+    padding-left: 1rem; } }
 
 .hero-main .hero-context_title {
   font-size: 1.75rem; }
@@ -174,6 +320,9 @@ img {
       width: 50px;
       height: 3px;
       background-color: #156f5b; }
+  @media screen and (min-width: 1280px) {
+    .about-me .about-section {
+      margin-bottom: 7rem; } }
   .about-me .about-section .about-context {
     margin-top: 2rem; }
     @media screen and (min-width: 780px) {
@@ -242,58 +391,5 @@ img {
     .about-me .about-section .about-image img {
       height: 100%; }
 
-.service-page .service-title {
-  font-size: 1.2rem;
-  position: relative; }
-  @media screen and (min-width: 481px) {
-    .service-page .service-title {
-      font-size: 1.7rem; } }
-  @media screen and (min-width: 780px) {
-    .service-page .service-title {
-      font-size: 2rem; } }
-  @media screen and (min-width: 1024px) {
-    .service-page .service-title {
-      font-size: 2.4rem; } }
-  @media screen and (min-width: 1280px) {
-    .service-page .service-title {
-      font-size: 2.7rem; } }
-  .service-page .service-title::after {
-    content: "";
-    position: absolute;
-    bottom: -2px;
-    left: 50%;
-    transform: translateX(-25px);
-    width: 50px;
-    height: 3px;
-    background-color: #156f5b; }
-
-.service-page .service-items {
-  margin-top: 4rem; }
-  .service-page .service-items .service-item_image {
-    width: 300px;
-    height: 300px; }
-    .service-page .service-items .service-item_image img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover; }
-  .service-page .service-items .service-item_context {
-    margin-top: 1rem;
-    width: 300px; }
-    .service-page .service-items .service-item_context h3 {
-      font-size: 1.2rem;
-      line-height: 24px;
-      margin-bottom: 1rem; }
-      @media screen and (min-width: 780px) {
-        .service-page .service-items .service-item_context h3 {
-          font-size: 1.35rem; } }
-      @media screen and (min-width: 1280px) {
-        .service-page .service-items .service-item_context h3 {
-          font-size: 1.5rem; } }
-    .service-page .service-items .service-item_context p {
-      font-size: 0.9rem; }
-      @media screen and (min-width: 481px) {
-        .service-page .service-items .service-item_context p {
-          font-size: 1rem; } }
-      @media screen and (min-width: 1024px) {
-        .service-page .service-items .service-item_context p {
-          font-size: 1.1rem; } }
+#about {
+  overflow: hidden; }
