--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,12 +33,19 @@ img {
 	object-fit: cover;
 }
 
+p {
+	font-weight: 500;
+}
+
 @import "../scss/components/button-primary";
 @import "../scss/components/header-navigation";
 @import "../scss/components/service-item";
 @import "../scss/components/service-providing";
 @import "../scss/components/work-experience";
 @import "../scss/components/experience-item";
+@import "../scss/components/carousel-item";
 
+@import "../scss/components/form-component";
 @import "./pages/heroPage";
 @import "./pages/aboutPage";
+@import "./pages/projectsPage";
