--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -44,6 +44,7 @@ p {
 @import "../scss/components/work-experience";
 @import "../scss/components/experience-item";
 @import "../scss/components/carousel-item";
+@import "../scss/components/reviews-persons";
 
 @import "../scss/components/form-component";
 @import "./pages/heroPage";
