--- a/public/css/style.css
+++ b/public/css/style.css
@@ -267,6 +267,40 @@ p {
   opacity: 1;
   transform: rotateY(0) scale(1.1); }
 
+.reviews-item {
+  background: #fff;
+  box-shadow: 0px 0px 45px 0px #f0ebeb;
+  border-radius: 10px;
+  padding: 2rem 3rem;
+  width: 300px; }
+  .reviews-item .quotes {
+    font-size: 1.3rem; }
+  .reviews-item__image {
+    margin: 2rem 0; }
+    .reviews-item__image img {
+      height: 60px;
+      width: 60px;
+      border-radius: 50%;
+      border: 2px solid #156f5b;
+      object-fit: cover; }
+  .reviews-item p {
+    font-size: 0.9rem; }
+    @media screen and (min-width: 481px) {
+      .reviews-item p {
+        font-size: 1rem; } }
+    @media screen and (min-width: 780px) {
+      .reviews-item p {
+        font-size: 0.85rem; } }
+    @media screen and (min-width: 1024px) {
+      .reviews-item p {
+        font-size: 1.1rem; } }
+  .reviews-item .line {
+    height: 3px;
+    width: 20px;
+    background: #156f5b;
+    border: 10px;
+    margin: 2.5rem 0; }
+
 .form-container {
   position: relative;
   margin: 30px;
@@ -547,6 +581,33 @@ p {
       .projects .projects-title {
         font-size: 2.7rem; } }
     .projects .projects-title::after {
+      content: "";
+      position: absolute;
+      bottom: -2px;
+      left: 50%;
+      transform: translateX(-15px);
+      width: 30px;
+      height: 3px;
+      background-color: #156f5b; }
+
+.reviews {
+  margin-bottom: 4rem; }
+  .reviews-title {
+    font-size: 1.2rem;
+    position: relative; }
+    @media screen and (min-width: 481px) {
+      .reviews-title {
+        font-size: 1.7rem; } }
+    @media screen and (min-width: 780px) {
+      .reviews-title {
+        font-size: 2rem; } }
+    @media screen and (min-width: 1024px) {
+      .reviews-title {
+        font-size: 2.4rem; } }
+    @media screen and (min-width: 1280px) {
+      .reviews-title {
+        font-size: 2.7rem; } }
+    .reviews-title::after {
       content: "";
       position: absolute;
       bottom: -2px;
