--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,11 @@ img {
 p {
   font-weight: 500; }
 
+.fade-section {
+  opacity: 0;
+  transform: translateX(-50px) translateY(-20px);
+  transition: opacity 1s ease-out, transform 1s ease-out; }
+
 .btn-primary {
   background: #156f5b;
   color: #fffdf9;
@@ -268,6 +273,19 @@ p {
   opacity: 1;
   transform: rotateY(0) scale(1.1); }
 
+@media screen and (min-width: 1024px) {
+  .image-container {
+    height: 230px; } }
+
+@media screen and (min-width: 780px) {
+  .image-container {
+    height: 290px; } }
+
+.image-container img {
+  height: 100%;
+  width: auto;
+  object-fit: cover; }
+
 .reviews-item {
   background: #fff;
   box-shadow: 0px 0px 45px 0px #f0ebeb;
@@ -450,6 +468,24 @@ p {
     @media screen and (min-width: 780px) {
       .contact-context p {
         font-size: 1.1rem; } }
+
+.footer {
+  height: 100%; }
+  @media screen and (min-width: 780px) {
+    .footer div {
+      margin-left: auto; } }
+  .footer .logo {
+    width: 150px; }
+  .footer .email p {
+    margin-top: -3rem;
+    font-size: 1.3rem; }
+    @media screen and (min-width: 780px) {
+      .footer .email p {
+        margin-top: 0;
+        font-size: 1.1rem; } }
+    @media screen and (min-width: 1024px) {
+      .footer .email p {
+        font-size: 1.2rem; } }
 
 .hero-main {
   margin-bottom: 4rem; }
