--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,11 @@ body {
   background-color: #fffdf9;
   color: #212121; }
 
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #fffdf9;
+    color: #212121; } }
+
 .container {
   max-width: 1250px !important;
   margin: 0 auto;
