--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,6 +22,13 @@ body {
 	color: $black;
 }
 
+@media (prefers-color-scheme: dark) {
+	body {
+		background-color: $white;
+		color: $black;
+	}
+}
+
 .container {
 	max-width: 1250px !important;
 	margin: 0 auto;
