--- a/src/scss/components/_carousel-item.scss
+++ b/src/scss/components/_carousel-item.scss
@@ -52,3 +52,11 @@
 		object-fit: cover;
 	}
 }
+
+.carousel-btn {
+	background-color: $green;
+	display: inline-block;
+	padding: 0.3rem 0.8rem;
+	color: $white;
+	border-radius: 5px;
+}
